# storage/api-docs/api-docs.json
@@ -1612,6 +1612,32 @@
                 },
                 "type": "object"
             },
+            "Option": {
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "pension_id": {
+                        "type": "integer"
+                    },
+                    "libelle": {
+                        "type": "string"
+                    },
+                    "tarif": {
+                        "type": "number",
+                        "format": "float"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time"
+                    }
+                },
+                "type": "object"
+            },
             "User": {
                 "properties": {
                     "id": {
